--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,62 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Custom Styles */
+@layer utilities {
+  .transition-all {
+    transition: all 0.3s ease-in-out;
+  }
+
+  .shadow-lg:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+  }
+
+  .hover\:scale-105:hover {
+    transform: scale(1.05);
+  }
+
+  .active\:scale-95:active {
+    transform: scale(0.95);
+  }
+
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
+@font-face {
+  font-family: 'Space Grotesk Regular';
+  src: url('/fonts/static/SpaceGrotesk-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Space Grotesk Bold';
+  src: url('/fonts/static/SpaceGrotesk-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Space Grotesk Light';
+  src: url('/fonts/static/SpaceGrotesk-Light.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Space Grotesk SemiBold';
+  src: url('/fonts/static/SpaceGrotesk-SemiBold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Space Grotesk', sans-serif;
+}
+
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -26,8 +82,3 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
